--- a/catalog.html
+++ b/catalog.html
@@ -3,18 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <title>Каталог</title>
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i|PT+Sans:400,400i,700,700i&display=swap&subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet"  href="css/normalize.css">
+  <link rel="stylesheet"  href="css/style.css">
 </head>
 <body>
   <header>
-      <ul>
-        <li><a href="index.html"><img src="img/logo-technomart.svg" alt="логотип"></a></li>
-        <li><img src="img/icon-search.svg" alt="поиск"><input type="search" placeholder="Поиск:" name="s">
+      <ul class="list">
+        <li class="logo">
+          <a href="index.html">
+            <img src="img/logo-technomart.svg" alt="логотип">
+          </a>
         </li>
-        <li><img src="img/icon-bookmark.svg" alt="закладки"><a href="#">Закладки:0</a></li>
-        <li><img src="img/icon-cart.svg"><a href="#">Корзина:10</a></li>
-        <li><a href="#">Оформить заказ</a></li>
+        <li class="search">
+          <button type="submit">
+            <img src="img/icon-search.svg" alt="поиск">
+          </button>
+            <input type="search" placeholder="Поиск:" name="s">
+        </li>
+        <li class="order">
+          <img src="img/icon-bookmark.svg" alt="закладки"><a href="#">Закладки:0</a>
+        </li>
+        <li class="order cart">
+          <img src="img/icon-cart.svg">
+          <a href="#">Корзина:10</a></li>
+        <li class="checkout">
+          <a href="#">Оформить заказ</a>
+        </li>
       </ul>
-      <div>
+      <div class="description">
         <p>
           Интернет-магазин
           строительных материалов
@@ -22,26 +39,60 @@
         </p>
          <p>
          <a href="tel:+7 (812) 555-05-55"><img src="img/icon-phone.svg" alt="телефон">+7 (812) 555-05-55</a>
-         <span> г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
+         <span class="addres"> г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
         </p>
-        <span><img src="img/icon-user.svg" alt="иконка пользователя">Равшан Джамшутович</span>
-        <a href="#">Мои заказы</a>
-        <a href="#">Личный кабинет</a>
+        <div class="user-name">
+          <a href="#">
+            <img src="img/icon-user.svg" alt="иконка пользователя">Равшан Джамшутович
+          </a>
+        </div>
+        <div class="opportunities">
+          <a href="#">Мои заказы</a>
+          <a href="#">Личный кабинет</a>
+        </div>
         <nav>
-          <ul>
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="#">Компания</a></li>
-            <li><a href="catalog.html">Каталог</a></li>
-            <li><a href="#">Новости</a></li>
-            <li><a href="#">Спецпредложения</a></li>
-            <li><a href="#">Доставка</a></li>
-            <li><a href="#">Контакты</a></li>
+          <ul class="main-nav">
+            <li>
+              <a href="index.html">
+                <span>Главная</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span>Компания</span>
+              </a>
+            </li>
+            <li>
+              <a href="catalog.html">
+                <span>Каталог</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span>Новости</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span>Спецпредложения</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span>Доставка</span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <span>Контакты</span>
+              </a>
+            </li>
           </ul>
         </nav>
       </div>
     </header>
     <main>
-      <ul>
+      <ul class="bread-crumbs">
         <li><a href="#">Каталог</a></li>
         <li><a href="#">Инструмент</a></li>
         <li>Перфораторы</li>
@@ -49,8 +100,8 @@
       <h1>Перфораторы</h1>
       <section>
         <h2 class="visually-hidden">Фильтр товаров</h2>
-        <form method="get" action="https://echo.htmlacademy.ru" oninput="priceput.value=price.value">
-          <fieldset>
+        <form class="filter" method="get" action="https://echo.htmlacademy.ru" oninput="priceput.value=price.value">
+          <fieldset >
             <legend>Цена</legend>
             0<input type="range" id="price" name="price" min="0" max="3000" step="5"> 3000
             <div>
@@ -112,22 +163,22 @@
       </section>
       <section>
         <h2>Список товаров</h2>
-        <ul>
+        <ul class="product-sheet">
           <li>
             <img src="img/Perforator_3000.png" alt="Перфоратор BOSCH BFG 3000">
             <a href="#"><img src="img/icon-cart.svg" alt="иконка купить">КУПИТЬ</a>
             <button>В ЗАКЛАДКИ</button>
             <h3>Перфоратор BOSCH BFG3000</h3>
-            <span>22500</span>
-            <span>15500 Р.</span>
+            <span class="previous-price">22500</span>
+            <span class="new-prise">15500 Р.</span>
           </li>
           <li>
             <img src="img/Perforator_6000.png" alt="Перфоратор BOSCH BFG 6000">
             <a href="#"><img src="img/icon-cart.svg" alt="иконка купить">КУПИТЬ</a>
             <button>В ЗАКЛАДКИ</button>
             <h3>Перфоратор BOSCH BFG6000</h3>
-            <span>30500</span>
-            <span>25500 Р.</span>
+            <span class="previous-price">30500</span>
+            <span class="new-prise">25500 Р.</span>
           </li>
           <li>
             <img src="img/Perforator_2000.png" alt="Перфоратор BOSCH BFG 2000">
@@ -135,14 +186,15 @@
             <button>В ЗАКЛАДКИ</button>
             <img src="img/new flag.png" alt="новый товар">
             <h3>Перфоратор BOSCH BFG2000</h3>
+            <span class="new-prise">12500 Р.</span>
           </li>
           <li>
             <img src="img/Perforator_3000.png" alt="Перфоратор BOSCH BFG 3000">
             <a href="#"><img src="img/icon-cart.svg" alt="иконка купить">КУПИТЬ</a>
             <button>В ЗАКЛАДКИ</button>
             <h3>Перфоратор BOSCH BFG3000</h3>
-            <span>22500</span>
-            <span>15500 Р.</span>
+            <span class="previous-price">22500</span>
+            <span class="new-prise">15500 Р.</span>
           </li>
           <li>
             <img src="img/Perforator_6000.png" alt="Перфоратор BOSCH BFG 6000">
@@ -150,15 +202,15 @@
             <button>В ЗАКЛАДКИ</button>
             <img src="img/new flag.png" alt="новый товар">
             <h3>Перфоратор BOSCH BFG6000</h3>
-            <span>30500</span>
-            <span>25500 Р.</span>
+            <span class="previous-price">30500</span>
+            <span class="new-prise">25500 Р.</span>
           </li>
           <li>
             <img src="img/Perforator_2000.png" alt="Перфоратор BOSCH BFG 2000">
             <a href="#"><img src="img/icon-cart.svg" alt="иконка купить">КУПИТЬ</a>
             <button>В ЗАКЛАДКИ</button>
             <h3>Перфоратор BOSCH BFG2000</h3>
-            <span>12500 Р.</span>
+            <span class="new-prise">12500 Р.</span>
           </li>
           <li>
             <img src="img/Perforator_3000.png" alt="Перфоратор BOSCH BFG 3000">
@@ -166,23 +218,23 @@
             <img src="img/new flag.png" alt="новый товар">
             <button>В ЗАКЛАДКИ</button>
             <h3>Перфоратор BOSCH BFG3000</h3>
-            <span>22500</span>
-            <span>15500 Р.</span>
+            <span class="previous-price">22500</span>
+            <span class="new-prise">15500 Р.</span>
           </li>
           <li>
             <img src="img/Perforator_6000.png" alt="Перфоратор BOSCH BFG 6000">
             <a href="#"><img src="img/icon-cart.svg" alt="иконка купить">КУПИТЬ</a>
             <button>В ЗАКЛАДКИ</button>
             <h3>Перфоратор BOSCH BFG6000</h3>
-            <span>30500</span>
-            <span>25500 Р.</span>
+            <span class="previous-price">30500</span>
+            <span class="new-prise">25500 Р.</span>
           </li>
           <li>
             <img src="img/Perforator_2000.png" alt="Перфоратор BOSCH BFG 2000">
             <a href="#"><img src="img/icon-cart.svg" alt="иконка купить">КУПИТЬ</a>
             <button>В ЗАКЛАДКИ</button>
             <h3>Перфоратор BOSCH BFG2000</h3>
-            <span>12500 Р.</span>
+            <span class="new-prise">12500 Р.</span>
           </li>
         </ul>
         <div>
@@ -214,41 +266,42 @@
       </section>
     </main>
     <footer>
-      <div>
-        <a href="index.html"><img src="img/logo-technomart.svg" alt="логотип"></a>
-        <ul>
+      <div class="footer-nav">
+        <a class="logo" href="index.html"><img src="img/logo-technomart.svg" alt="логотип"></a>
+        <ul class=" footer-main-nav">
           <li><a href="#">Компания</a></li>
           <li><a href="#">Новости</a></li>
           <li><a href="catalog.html">Каталог</a></li>
           <li><a href="#">Доставка</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        <ul>
+        <p class="addres">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <ul class="offers">
           <li><a href="#">Материалы</a></li>
           <li><a href="#">Техника</a></li>
           <li><a href="#">Инструмент</a></li>
           <li><a href="#">Спецпредложения</a></li>
         </ul>
       </div>
-      <div>
+      <div class="social">
         <p>© 2010–2019 Компания «Техномарт»
            Все права защищены
         </p>
-        <ul>
-          <li><a href="#"><img src="img/icon-vk.svg" alt="Вконтактек"></a></li>
+        <ul class="social-icon">
+          <li><a href="#"><img src="img/icon-vk.svg" alt="Вконтакте"></a></li>
           <li><a href="#"><img src="img/icon-fb.svg" alt="фейсбук"></a></li>
           <li><a href="#"><img src="img/icon-insta.svg" alt="инстаграм"></a></li>
         </ul>
-        <p>Обратная связь:
+        <div class="connection">
+          <p>Обратная связь:
           <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
         </p>
         <p>
           Разработано —
           <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
         </p>
+        </div>
       </div>
     </footer>
-
-</body>
+  </body>
 </html>
